--- a/index.html
+++ b/index.html
@@ -26,6 +26,44 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- header -->
+    <header>
+      <nav class="navbar">
+        <div class="container">
+          <div>
+            <a class="navbar-brand d-lg-none" href="#">
+              <img
+                src="img/mobile-logo.png"
+                alt="Logo"
+                width="30"
+                height="30"
+              />
+            </a>
+
+            <a class="navbar-brand d-none d-lg-block" href="#">
+              <img src="img/logo.svg" alt="Logo" width="135" height="30" />
+            </a>
+          </div>
+          <form class="d-flex flex-grow-1 form-floating" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="form-search"
+              id="form-search"
+            />
+            <label
+              for="form-search"
+              class="text-secondary-emphasis fw-semibold opacity-75"
+              ><i class="fa-solid fa-magnifying-glass opacity-100"></i> Prova a
+              cercare: Lezioni di Laravel</label
+            >
+          </form>
+        </div>
+      </nav>
+    </header>
+
+    <!-- /header -->
+
     <!-- js bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
