--- a/index.html
+++ b/index.html
@@ -79,6 +79,42 @@
 
     <!-- /header -->
 
+    <!-- main -->
+    <main class="">
+      <div class="container ag-bg-lightgrey d-flex">
+        <!-- sidebar -->
+        <div class="sidebar d-flex flex-column px-4 py-4 ag-bg-blue">
+          <div class="d-flex align-items-center pb-3">
+            <i class="fa-solid fa-house text-white me-3"></i>
+            <h5 class="text-white fs-6 mb-0">Home</h5>
+          </div>
+
+          <div class="d-flex align-items-center pb-3">
+            <i class="fa-solid fa-chart-simple text-white me-3"></i>
+            <h5 class="text-white fs-6 mb-0">Stats</h5>
+          </div>
+
+          <div class="d-flex align-items-center pb-3">
+            <i class="fa-solid fa-signal text-white me-3"></i>
+
+            <h5 class="text-white fs-6 mb-0">Signals</h5>
+          </div>
+
+          <div class="admin mt-auto d-flex align-items-center">
+            <i class="fa-solid fa-gear text-white me-3"></i>
+            <h5 class="text-white fs-6 mb-0">Admin</h5>
+          </div>
+        </div>
+
+        <!-- /sidebar -->
+
+        <!-- corpo pagina -->
+        <div class="page-corp">a</div>
+        <!-- /corpo pagina -->
+      </div>
+    </main>
+    <!-- /main -->
+
     <!-- js bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
