--- a/index.html
+++ b/index.html
@@ -83,26 +83,43 @@
     <main class="">
       <div class="container ag-bg-lightgrey d-flex">
         <!-- sidebar -->
-        <div class="sidebar d-flex flex-column px-4 py-4 ag-bg-blue">
-          <div class="d-flex align-items-center pb-3">
-            <i class="fa-solid fa-house text-white me-3"></i>
-            <h5 class="text-white fs-6 mb-0">Home</h5>
+        <div
+          class="sidebar d-flex flex-column px-4 py-4 ag-bg-blue text-center text-lg-start"
+        >
+          <div class="row align-items-center pb-3">
+            <div class="col-12 col-lg-3">
+              <i class="fa-solid fa-house text-white"></i>
+            </div>
+            <div class="col-lg-9 d-none d-lg-block">
+              <h5 class="text-white fs-6 mb-0">Home</h5>
+            </div>
           </div>
 
-          <div class="d-flex align-items-center pb-3">
-            <i class="fa-solid fa-chart-simple text-white me-3"></i>
-            <h5 class="text-white fs-6 mb-0">Stats</h5>
+          <div class="row align-items-center pb-3">
+            <div class="col-12 col-lg-3">
+              <i class="fa-solid fa-chart-simple text-white"></i>
+            </div>
+            <div class="col-lg-9 d-none d-lg-block">
+              <h5 class="text-white fs-6 mb-0">Stats</h5>
+            </div>
           </div>
 
-          <div class="d-flex align-items-center pb-3">
-            <i class="fa-solid fa-signal text-white me-3"></i>
-
-            <h5 class="text-white fs-6 mb-0">Signals</h5>
+          <div class="row align-items-center pb-3">
+            <div class="col-12 col-lg-3">
+              <i class="fa-solid fa-signal text-white"></i>
+            </div>
+            <div class="col-lg-9 d-none d-lg-block">
+              <h5 class="text-white fs-6 mb-0">Signals</h5>
+            </div>
           </div>
 
-          <div class="admin mt-auto d-flex align-items-center">
-            <i class="fa-solid fa-gear text-white me-3"></i>
-            <h5 class="text-white fs-6 mb-0">Admin</h5>
+          <div class="admin mt-auto row align-items-center pb-3">
+            <div class="col-12 col-lg-3">
+              <i class="fa-solid fa-gear text-white"></i>
+            </div>
+            <div class="col-lg-9 d-none d-lg-block">
+              <h5 class="text-white fs-6 mb-0">Admin</h5>
+            </div>
           </div>
         </div>
 
