--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- header -->
     <header>
       <nav class="navbar">
-        <div class="container">
+        <div class="d-flex w-100 align-items-center px-3">
           <div>
             <a class="navbar-brand d-lg-none" href="#">
               <img
@@ -81,7 +81,7 @@
 
     <!-- main -->
     <main class="">
-      <div class="container ag-bg-lightgrey d-flex">
+      <div class="container d-flex">
         <!-- sidebar -->
         <div
           class="sidebar d-flex flex-column px-4 py-4 ag-bg-blue text-center text-lg-start"
@@ -126,7 +126,13 @@
         <!-- /sidebar -->
 
         <!-- corpo pagina -->
-        <div class="page-corp">a</div>
+        <div class="page-corp">
+          <!-- jumbotron -->
+          <div class="jumbotron ag-bg-lighterblue">a</div>
+          <!-- /jumbotron -->
+
+          <div>a</div>
+        </div>
         <!-- /corpo pagina -->
       </div>
     </main>
