feat: cambio container main

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <!-- main -->
     <main class="">
-      <div class="container d-flex">
+      <div class="main-container d-flex">
         <!-- sidebar -->
         <div
           class="sidebar d-flex flex-column px-4 py-4 ag-bg-blue text-center text-lg-start"
