--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     <!-- header -->
     <header>
       <nav class="navbar">
-        <div class="d-flex w-100 align-items-center px-3">
+        <div class="container-fluid">
+          <!-- <div class="row">
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col"></div>
+          </div> -->
           <div>
             <a class="navbar-brand d-lg-none" href="#">
               <img
@@ -44,6 +49,7 @@
               <img src="img/logo.svg" alt="Logo" width="135" height="30" />
             </a>
           </div>
+
           <form class="d-flex flex-grow-1 form-floating" role="search">
             <input
               class="form-control me-2 ag-bg-lightgrey"
@@ -83,44 +89,65 @@
     <main class="">
       <div class="main-container d-flex">
         <!-- sidebar -->
-        <div
-          class="sidebar d-flex flex-column px-4 py-4 ag-bg-blue text-center text-lg-start"
-        >
-          <div class="row align-items-center pb-3">
-            <div class="col-12 col-lg-3">
-              <i class="fa-solid fa-house text-white"></i>
-            </div>
-            <div class="col-lg-9 d-none d-lg-block">
-              <h5 class="text-white fs-6 mb-0">Home</h5>
-            </div>
-          </div>
+        <!-- sidebar -->
+        <div class="sidebar ag-bg-blue py-4 px-3">
+          <ul class="h-100 list-unstyled d-flex flex-column">
+            <li class="justify-content-center my-1">
+              <a
+                href="#"
+                class="text-decoration-none text-white row align-items-center gx-4"
+              >
+                <div class="col-12 col-lg-3">
+                  <i class="fa-solid fa-house text-white"></i>
+                </div>
+                <div class="col-lg-9 d-none d-lg-block">
+                  <h5 class="text-white fs-6 mb-0">Home</h5>
+                </div></a
+              >
+            </li>
 
-          <div class="row align-items-center pb-3">
-            <div class="col-12 col-lg-3">
-              <i class="fa-solid fa-chart-simple text-white"></i>
-            </div>
-            <div class="col-lg-9 d-none d-lg-block">
-              <h5 class="text-white fs-6 mb-0">Stats</h5>
-            </div>
-          </div>
+            <li class="justify-content-center my-1">
+              <a
+                href="#"
+                class="text-decoration-none text-white row align-items-center"
+              >
+                <div class="col-12 col-lg-3">
+                  <i class="fa-solid fa-chart-simple text-white"></i>
+                </div>
+                <div class="col-lg-9 d-none d-lg-block">
+                  <h5 class="text-white fs-6 mb-0">Stats</h5>
+                </div></a
+              >
+            </li>
 
-          <div class="row align-items-center pb-3">
-            <div class="col-12 col-lg-3">
-              <i class="fa-solid fa-signal text-white"></i>
-            </div>
-            <div class="col-lg-9 d-none d-lg-block">
-              <h5 class="text-white fs-6 mb-0">Signals</h5>
-            </div>
-          </div>
+            <li class="justify-content-center my-1">
+              <a
+                href="#"
+                class="text-decoration-none text-white row align-items-center"
+              >
+                <div class="col-12 col-lg-3">
+                  <i class="fa-solid fa-signal text-white"></i>
+                </div>
+                <div class="col-lg-9 d-none d-lg-block">
+                  <h5 class="text-white fs-6 mb-0">Signals</h5>
+                </div></a
+              >
+            </li>
 
-          <div class="admin mt-auto row align-items-center pb-3">
-            <div class="col-12 col-lg-3">
-              <i class="fa-solid fa-gear text-white"></i>
-            </div>
-            <div class="col-lg-9 d-none d-lg-block">
-              <h5 class="text-white fs-6 mb-0">Admin</h5>
-            </div>
-          </div>
+            <li class="mt-auto justify-content-center">
+              <a
+                href="#"
+                class="text-decoration-none text-white row align-items-center"
+              >
+                <div class="col-12 col-lg-3">
+                  <i class="fa-solid fa-gear text-white"></i>
+                </div>
+                <div class="col-lg-9 d-none d-lg-block">
+                  <h5 class="text-white fs-6 mb-0">Admin</h5>
+                </div></a
+              >
+            </li>
+          </ul>
         </div>
 
         <!-- /sidebar -->
