--- a/index.html
+++ b/index.html
@@ -156,7 +156,17 @@
         <!-- corpo pagina -->
         <div class="page-corp">
           <!-- jumbotron -->
-          <div class="jumbotron ag-bg-lighterblue">a</div>
+          <div class="jumbotron container-fluid ag-bg-lighterblue">
+            <div class="row">
+              <div
+                class="bg-white col-12 col-sm-4 col-lg-2 offset-lg-2 align-self-lg-end"
+              >
+                v
+              </div>
+              <div class="col-12 col-sm-4">a</div>
+              <div class="bg-white col-12 col-sm-4 col-lg-2 offset-lg-2">a</div>
+            </div>
+          </div>
           <!-- /jumbotron -->
 
           <div>a</div>
