--- a/index.html
+++ b/index.html
@@ -156,15 +156,18 @@
         <!-- corpo pagina -->
         <div class="page-corp">
           <!-- jumbotron -->
-          <div class="jumbotron container-fluid ag-bg-lighterblue">
+          <div class="jumbotron container-fluid ag-bg-lighterblue text-white">
             <div class="row">
-              <div
-                class="bg-white col-12 col-sm-4 col-lg-2 offset-lg-2 align-self-lg-end"
+              <section
+                class="col-12 col-sm-4 col-lg-2 offset-lg-2 order-sm-1 d-flex align-items-center"
               >
-                v
-              </div>
+                <h6 class="m-0">Nuovo Studente</h6>
+                <button type="button" class="btn btn-outline-light ms-4">
+                  <i class="fa-solid fa-plus"></i>
+                </button>
+              </section>
               <div class="col-12 col-sm-4">a</div>
-              <div class="bg-white col-12 col-sm-4 col-lg-2 offset-lg-2">a</div>
+              <div class="col-12 col-sm-4 col-lg-2 offset-lg-2">a</div>
             </div>
           </div>
           <!-- /jumbotron -->
