--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="page-corp">
           <!-- jumbotron -->
           <div class="jumbotron container-fluid ag-bg-lighterblue text-white">
-            <div class="row">
+            <section class="row">
               <section
                 class="col-12 col-sm-4 col-lg-2 offset-lg-2 order-sm-1 d-flex align-items-center"
               >
@@ -166,7 +166,37 @@
                   <i class="fa-solid fa-plus"></i>
                 </button>
               </section>
-              <div class="col-12 col-sm-4">a</div>
+
+              <section class="boolean-apps col-12 col-sm-4">
+                <div class="row">
+                  <h4 class="col-auto m-0">Boolean</h4>
+                  <button
+                    type="button"
+                    class="btn btn-primary rounded-pill ag-bg-btn-blue py-0 btn-sm col-auto mt-1"
+                  >
+                    Piano blaze
+                  </button>
+                </div>
+                <div class="row align-items-center">
+                  <button
+                    type="button"
+                    class="btn btn-primary rounded-pill ag-bg-btn-blue py-0 btn-sm col-auto"
+                  >
+                    3 app
+                  </button>
+                  <span class="col-auto"
+                    ><i class="fa-solid fa-angles-right"></i
+                  ></span>
+                  <button
+                    type="button"
+                    class="btn btn-primary rounded-pill ag-bg-btn-blue py-0 btn-sm col-auto"
+                  >
+                    +
+                  </button>
+                </div>
+              </section>
+
+
               <div class="col-12 col-sm-4 col-lg-2 offset-lg-2">a</div>
             </div>
           </div>
