--- a/index.html
+++ b/index.html
@@ -216,7 +216,12 @@
           </div>
           <!-- /jumbotron -->
 
-          <div>a</div>
+          <div class="container-fluid row">
+            <div class="col-lg-8">a</div>
+            <div class="col-lg-8 order-lg-1">a</div>
+            <div class="col-lg-4">a</div>
+            <div class="col-lg-4 order-lg-1">a</div>
+          </div>
         </div>
         <!-- /corpo pagina -->
       </div>
