--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
     <main class="">
       <div class="main-container d-flex">
         <!-- sidebar -->
-        <!-- sidebar -->
         <div class="sidebar ag-bg-blue py-4 px-4">
           <ul class="h-100 list-unstyled d-flex flex-column">
             <li class="justify-content-center my-1">
@@ -154,7 +153,7 @@
         <!-- /sidebar -->
 
         <!-- corpo pagina -->
-        <div class="page-corp">
+        <div class="page-corp overflow-auto">
           <!-- jumbotron -->
           <div class="jumbotron container-fluid ag-bg-lighterblue text-white">
             <div class="row py-4 pb-lg-0">
@@ -216,8 +215,330 @@
           </div>
           <!-- /jumbotron -->
 
-          <div class="container-fluid row">
-            <div class="col-lg-8">a</div>
+          <!-- corpo pagina -->
+          <div class="row my-4 mx-2">
+            <div class="col-lg-8 ps-1">
+              <div class="card">
+                <div class="card-header"><h3>Prossime classi</h3></div>
+                <div class="p-3">
+                  <table class="table">
+                    <thead class="">
+                      <tr class="">
+                        <th scope="col" class="w-standard-big fw-medium">
+                          Nome
+                        </th>
+                        <th
+                          scope="col"
+                          class="d-none d-sm-table-cell w-standard-small text-center fw-medium"
+                        >
+                          Data inizio
+                        </th>
+                        <th
+                          scope="col"
+                          class="d-none d-sm-table-cell w-standard-small text-center fw-medium"
+                        >
+                          ROI
+                        </th>
+                        <th
+                          scope="col"
+                          class="w-standard-small text-center fw-medium"
+                        >
+                          Stato
+                        </th>
+                        <th
+                          scope="col"
+                          class="w-standard-small text-center fw-medium"
+                        >
+                          Azioni
+                        </th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>
+                          <img
+                            class="img-fluid"
+                            src="img/class-avatar.png"
+                            alt="avatar"
+                          />Classe 75
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">
+                          15 Feb 2021
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">20%</td>
+                        <td class="text-center">
+                          <button
+                            type="button"
+                            class="btn btn-success btn-sm py-0 ag-btm-radius"
+                          >
+                            Done
+                          </button>
+                        </td>
+                        <td class="d-flex justify-content-center">
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary me-2"
+                          >
+                            <i class="fa-solid fa-pen"></i>
+                          </button>
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary ms-1"
+                          >
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <img
+                            class="img-fluid"
+                            src="img/class-avatar.png"
+                            alt="avatar"
+                          />Classe 76
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">
+                          16 Feb 2021
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">20%</td>
+                        <td class="text-center">
+                          <button
+                            type="button"
+                            class="btn btn-success btn-sm py-0 ag-btm-radius"
+                          >
+                            Done
+                          </button>
+                        </td>
+                        <td class="d-flex justify-content-center">
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary me-2"
+                          >
+                            <i class="fa-solid fa-pen"></i>
+                          </button>
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary ms-1"
+                          >
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <img
+                            class="img-fluid"
+                            src="img/class-avatar.png"
+                            alt="avatar"
+                          />Classe 77
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">
+                          17 Feb 2021
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">20%</td>
+                        <td class="text-center">
+                          <button
+                            type="button"
+                            class="btn btn-warning text-white btn-sm py-0 ag-btm-radius"
+                          >
+                            process
+                          </button>
+                        </td>
+                        <td class="d-flex justify-content-center">
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary me-2"
+                          >
+                            <i class="fa-solid fa-pen"></i>
+                          </button>
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary ms-1"
+                          >
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <img
+                            class="img-fluid"
+                            src="img/class-avatar.png"
+                            alt="avatar"
+                          />Classe 78
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">
+                          18 Feb 2021
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">20%</td>
+                        <td class="text-center">
+                          <button
+                            type="button"
+                            class="btn btn-success btn-sm py-0 ag-btm-radius"
+                          >
+                            Done
+                          </button>
+                        </td>
+                        <td class="d-flex justify-content-center">
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary me-2"
+                          >
+                            <i class="fa-solid fa-pen"></i>
+                          </button>
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary ms-1"
+                          >
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <img
+                            class="img-fluid"
+                            src="img/class-avatar.png"
+                            alt="avatar"
+                          />Classe 79
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">
+                          19 Feb 2021
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">20%</td>
+                        <td class="text-center">
+                          <button
+                            type="button"
+                            class="btn btn-danger text-white btn-sm py-0 ag-btm-radius"
+                          >
+                            failed
+                          </button>
+                        </td>
+                        <td class="d-flex justify-content-center">
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary me-2"
+                          >
+                            <i class="fa-solid fa-pen"></i>
+                          </button>
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary ms-1"
+                          >
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <img
+                            class="img-fluid"
+                            src="img/class-avatar.png"
+                            alt="avatar"
+                          />Classe 80
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">
+                          20 Feb 2021
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">20%</td>
+                        <td class="text-center">
+                          <button
+                            type="button"
+                            class="btn btn-success btn-sm py-0 ag-btm-radius"
+                          >
+                            Done
+                          </button>
+                        </td>
+                        <td class="d-flex justify-content-center">
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary me-2"
+                          >
+                            <i class="fa-solid fa-pen"></i>
+                          </button>
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary ms-1"
+                          >
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <img
+                            class="img-fluid"
+                            src="img/class-avatar.png"
+                            alt="avatar"
+                          />Classe 81
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">
+                          21 Feb 2021
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">20%</td>
+                        <td class="text-center">
+                          <button
+                            type="button"
+                            class="btn btn-danger text-white btn-sm py-0 ag-btm-radius"
+                          >
+                            failed
+                          </button>
+                        </td>
+                        <td class="d-flex justify-content-center">
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary me-2"
+                          >
+                            <i class="fa-solid fa-pen"></i>
+                          </button>
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary ms-1"
+                          >
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <img
+                            class="img-fluid"
+                            src="img/class-avatar.png"
+                            alt="avatar"
+                          />Classe 82
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">
+                          22 Feb 2021
+                        </td>
+                        <td class="d-none d-sm-table-cell text-center">20%</td>
+                        <td class="text-center">
+                          <button
+                            type="button"
+                            class="btn btn-success btn-sm py-0 ag-btm-radius"
+                          >
+                            Done
+                          </button>
+                        </td>
+                        <td class="d-flex justify-content-center">
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary me-2"
+                          >
+                            <i class="fa-solid fa-pen"></i>
+                          </button>
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary ms-1"
+                          >
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
             <div class="col-lg-8 order-lg-1">a</div>
             <div class="col-lg-4">a</div>
             <div class="col-lg-4 order-lg-1">a</div>
